--- a/website/frontend/src/components/PricingCardComponent.css
+++ b/website/frontend/src/components/PricingCardComponent.css
@@ -6,7 +6,7 @@
     height: 350px;
     border-radius: 15px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    margin-bottom: 10px;
+    margin: 0 5px 10px 5px
 }
 
 .pricing-header-container {
