--- a/website/frontend/src/pages/TransactionPage/TransactionPage.css
+++ b/website/frontend/src/pages/TransactionPage/TransactionPage.css
@@ -87,7 +87,17 @@
 .stripe-container button {
     cursor: pointer;
     border: 1px solid black;
+    background-color: black;
+    color: white;
     padding: 10px;
     font-family: 'DM Sans', sans-serif;
     border-radius: 10px;
+    transition: 0.2s ease-in-out;
+}
+
+.stripe-container button:hover {
+    cursor: pointer;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
 }
