--- a/website/frontend/src/pages/SignUpPage/SignUpPage.css
+++ b/website/frontend/src/pages/SignUpPage/SignUpPage.css
@@ -32,23 +32,30 @@ input {
     outline: none;
     font-family: "DM Sans", sans-serif;
     font-weight: 500;
+    border-radius: 7px;
+    padding: 5px 10px;
+    width: 200px;
+    border: none;
+    border: 1px solid grey;
 }
 
 .auth-container form .button {
     text-align: center;
-    color: white;
+    color: rgb(216, 158, 221);
     margin-top: 20px;
     cursor: pointer;
     border: 1px solid white;
+    background-color: white;
     padding: 5px 10px;
     font-size: 16px;
     font-family: "DM Sans", sans-serif;
     font-weight: 900;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    border-radius: 10px; 
+    transition: 0.2s ease-in-out;
+    border-radius: 7px; 
+    width: 200px;
 }
 
 .auth-container form .button:hover {
-    background-color: white; 
-    color: rgb(216, 158, 221);
+    background-color: none; 
+    color: white;
 }
