--- a/website/frontend/src/pages/AuthPage/AuthPage.css
+++ b/website/frontend/src/pages/AuthPage/AuthPage.css
@@ -39,7 +39,7 @@ input {
     border: 1px solid grey;
 }
 
-.auth-container form .button {
+.auth-container form .button-submit {
     text-align: center;
     color: rgb(216, 158, 221);
     margin-top: 20px;
@@ -55,7 +55,7 @@ input {
     width: 200px;
 }
 
-.auth-container form .button:hover {
+.auth-container form .button-submit:hover {
     background-color: none; 
     color: white;
 }
